Bug 1730351 - Don't use NS_IsHintSubset unnecessarily in some places. r=layout-reviewers,jfkthame

This should cause no behavior change, but is a bit cleaner when one of the
arguments to IsHintSubset is just one bit.

Differential Revision: https://phabricator.services.mozilla.com/D126812